--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mat-typography">
+  <!-- class="mat-typography" -->
+  <body>
     <app-root></app-root>
   </body>
 </html>
